<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragSecServices">

     <TextView
        android:id="@+id/textView_frag_abt_1"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/developer_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/show_website_button"
         app:layout_constraintTop_toBottomOf="@+id/textView_frag_abt_1"
         />


     <Button
         android:id="@+id/show_website_button"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="4dp"
         android:text="@string/web"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:icon="@drawable/outline_language_24"
         />

     <Button
         android:id="@+id/call_bttn"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="@string/call"
         app:icon="@drawable/outline_call_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/show_website_button"
          app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>